# py-az-vm-controller-xethhung12

./: .gitignore  README.md  apply-dependencies.py  build.sh  dev-requirements.txt  install-dependencies.sh  pyproject.toml  requirements.txt
src/py_az_vm_controller/: __init__.py
src/py_az_vm_controller/_cmd/: run.py
src/py_az_vm_controller_xethhung12/: __init__.py  __main__.py
src/py_az_vm_controller_xethhung12/_az/: azComp.py
src/py_az_vm_controller_xethhung12/_cmd/: run.py
