[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"


[project]
name = "py_az_vm_controller"
version = "0.0.1"
authors = [
  { name="Xeth Hung", email="admin@xethh.me" },
]
description = "A small package targeting to help on python project packaging process"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "j-vault-http-client-xethhung12 >= 0.1.1"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/py_az_vm_controller"]

[project.scripts]
py-az-vm-controller="py_az_vm_controller._cmd.run:main"

