[build-system]
requires = [ "hatchling >= 1.26",]
build-backend = "hatchling.build"

[project]
name = "py-az-vm-controller-xethhung12"
version = "0.1.2"
description = "A small package targeting to help on python project packaging process"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "GPL-3.0-only"
license-files = [ "LICEN[CS]E*",]
dependencies = [ "j-vault-http-client-xethhung12 >= 0.1.1", "py-xh-custapp-xethhung12",]
[[project.authors]]
name = "Xeth Hung"
email = "admin@xethh.me"

[project.scripts]
pyAzVMController = "py_az_vm_controller_xethhung12._cmd.run:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build.targets.wheel]
packages = [ "src/py_az_vm_controller_xethhung12",]
